# async-graphql-reproducer

./: Cargo.toml
apollo-server/: gateway.js
some-service/: Cargo.toml
some-service/src/: graphql.rs  main.rs
