[package]
name = "some-service"
version = "0.1.0"
edition = "2018"

[dependencies]
async-graphql = "1.17.0"
async-graphql-actix-web = "1.17.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
bigdecimal = { version = "0.1.2", features = ["serde"] }
num-bigint = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
