[package]
name = "some-service"
version = "0.1.0"
edition = "2018"

[dependencies]
async-graphql = "2.0.0-alpha.19"
async-graphql-actix-web = "2.0.0-alpha.19"
actix-web = "3.0.2"
actix-rt = "1.1.1"
bigdecimal = { version = "0.1.2", features = ["serde"] }
num-bigint = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
